[gd_scene load_steps=6 format=3 uid="uid://l62ue74f105k"]

[ext_resource type="Script" path="res://scripts/enemy.gd" id="1_cvt7w"]
[ext_resource type="Texture2D" uid="uid://2v1pevuacl1w" path="res://icon.svg" id="1_wy2mh"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wksqy"]
size = Vector2(38, 26)

[sub_resource type="Animation" id="Animation_3g2vj"]
resource_name = "die"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Icon:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(-100, -100), Vector2(-200, 500)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_88m6w"]
_data = {
"die": SubResource("Animation_3g2vj")
}

[node name="Enemy" type="CharacterBody2D"]
script = ExtResource("1_cvt7w")

[node name="Icon" type="Sprite2D" parent="."]
scale = Vector2(0.3, 0.2)
texture = ExtResource("1_wy2mh")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_wksqy")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_88m6w")
}

[node name="WallDetectorRight" type="RayCast2D" parent="."]
target_position = Vector2(21, 0)

[node name="WallDetectorLeft" type="RayCast2D" parent="."]
target_position = Vector2(-21, 0)

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
